<?xml version="1.0" encoding="UTF-8" ?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.carsmart</groupId>
	<artifactId>goc-parent</artifactId>
	<packaging>pom</packaging>
	<version>0.0.1-SNAPSHOT</version>

	<modules>
		<module>goc-core</module>
		<module>goc-web</module>
	</modules>
	
	<!--distributionManagement>
        <repository>
            <id>releases</id>
            <name>Internal Releases</name>
            <url>http://maven/nexus/content/repositories/releases/</url>
        </repository>
        <snapshotRepository>
            <id>snapshots</id>
            <name>Internal Snapshots</name>
            <url>http://maven/nexus/content/repositories/snapshots/</url>
        </snapshotRepository>
    </distributionManagement-->

	<build>
		<pluginManagement>
			<plugins>
			<plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>2.2.1</version>
            <executions>
                <execution>
                    <phase>package</phase>
                    <goals>
                        <goal>jar-no-fork</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.1</version>
					<configuration>
						<source>1.7</source>
						<target>1.7</target>
						   <argLine>-XX:MaxPermSize=4G</argLine>
						   
					</configuration>
				</plugin>
				 <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-repository-plugin</artifactId>
            <version>2.3.1</version>
            <executions>
                <execution>
                    <phase>package</phase>
                    <goals>
                        <goal>bundle-create</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	
  <!--scm>
    <connection>scm:svn:http://scm/svn/carsmart/trunk/eden/eden-at</connection>
    <developerConnection>scm:svn:http://scm/svn/carsmart/trunk/eden/eden-at</developerConnection>
    <url>http://scm/svn/carsmart/trunk/eden/eden-at</url>
  </scm-->

</project>
